# github-metrics

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  common.py  docker-compose.yml  fetch_prs_mtm.py  fetch_prs_mtr.py  fetch_prs_review_time.py  github_metrics.py  helpers.py  hotfixes_count.py  mr.py  pr_size.py  request_github.py  requirements-dev.txt  requirements.txt  run.py  settings.py  setup.cfg  setup.py  ttm.py  tto.py  ttr.py
etc/: release.sh
github_metrics/: __init__.py  common.py  helpers.py  main.py  request.py  request_github.py  run.py  settings.py
github_metrics/metrics/: all.py  hotfixes_count.py  merge_rate.py  mr.py  open_to_merge.py  pr_size.py  prs_count.py  time_to_merge.py  time_to_open.py  time_to_review.py  ttm.py  tto.py  ttr.py
tests/: mocks.py  request_mock.py  test_common.py  test_fetch_prs_mtm.py  test_helpers.py  test_merge_rate.py  test_mr.py  test_prs_mtm.py  test_prs_mtr.py  test_time_to_merge.py  test_time_to_review.py  test_ttm.py  test_ttr.py
