[metadata]
name = github-metrics
version = 0.0.1
author = Victoria Pantoja (Vinta Software)
author_email = vicpantojadoamaral@gmail.com
description = Generate development metrics using github data for your project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vintasoftware/github-metrics
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    arrow>=1.0.2
    requests>=2.22.0
    python-decouple>=3.4
    numpy>=1.20.1
    click>=7.1.2
python_requires = >=3.8

[options.packages.find]
where = src