[bumpversion]
current_version = 0.0.10
commit = True
tag = True

[metadata]
name = github-metrics
author = Victoria Pantoja (Vinta Software)
author_email = victoria.pantoja@vinta.com.br
description = Generate development metrics using github data for your project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vintasoftware/github-metrics
classifiers =
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:github_metrics/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
